# VerifyBamID

./: .gitignore  .travis.yml  CMakeLists.txt  ContaminationEstimator.cpp  ContaminationEstimator.h  Dockerfile  MathGenMin.cpp  MathGenMin.h  MathGold.cpp  MathGold.h  README.md  SVDcalculator.cpp  SVDcalculator.h  SimplePileupViewer.cpp  SimplePileupViewer.h  TestGramSVD.cpp  TestReadVcf.cpp  _config.yml  main.cpp  params.cpp
.github/workflows/: ci.yml
libVcf/: CMakeLists.txt  libVcfFile.cpp  libVcfVcfFile.cpp  libVcfVcfFile.h
resource/: 1000g.100k.b37.vcf.gz.dat.UD  1000g.100k.b37.vcf.gz.dat.V  1000g.100k.b37.vcf.gz.dat.bed  1000g.100k.b38.vcf.gz.dat.V  1000g.100k.b38.vcf.gz.dat.bed  1000g.10k.b37.vcf.gz.dat.UD  1000g.10k.b37.vcf.gz.dat.V  1000g.10k.b37.vcf.gz.dat.bed  1000g.10k.b37.vcf.gz.dat.mu  1000g.10k.b38.vcf.gz.dat.UD  1000g.10k.b38.vcf.gz.dat.V  1000g.10k.b38.vcf.gz.dat.bed  1000g.10k.b38.vcf.gz.dat.mu  1000g.phase3.100k.b37.vcf.gz.dat.bed  1000g.phase3.100k.b37.vcf.gz.dat.mu  1000g.phase3.100k.b38.vcf.gz.dat.UD  1000g.phase3.100k.b38.vcf.gz.dat.V  1000g.phase3.100k.b38.vcf.gz.dat.bed  1000g.phase3.100k.b38.vcf.gz.dat.mu  1000g.phase3.10k.b37.vcf.gz.dat.bed  1000g.phase3.10k.b37.vcf.gz.dat.mu  1000g.pop  chr20.fa.gz.gzi  hapmap_3.3.b37.dat.mu  hgdp.100k.b37.vcf.gz.dat.UD  hgdp.100k.b37.vcf.gz.dat.V  hgdp.100k.b37.vcf.gz.dat.bed  hgdp.100k.b37.vcf.gz.dat.mu  hgdp.100k.b38.vcf.gz.dat.UD  hgdp.100k.b38.vcf.gz.dat.V  hgdp.100k.b38.vcf.gz.dat.bed  hgdp.100k.b38.vcf.gz.dat.mu  hgdp.10k.b37.vcf.gz.dat.UD  hgdp.10k.b37.vcf.gz.dat.V  hgdp.10k.b37.vcf.gz.dat.bed  hgdp.10k.b37.vcf.gz.dat.mu  hgdp.10k.b38.vcf.gz.dat.UD  hgdp.10k.b38.vcf.gz.dat.V  hgdp.10k.b38.vcf.gz.dat.bed  hgdp.10k.b38.vcf.gz.dat.mu  (+1 more)
resource/exome/: 1000g.phase3.10k.b37.exome.vcf.gz.dat.UD  1000g.phase3.10k.b37.exome.vcf.gz.dat.V  1000g.phase3.10k.b37.exome.vcf.gz.dat.bed  1000g.phase3.10k.b37.exome.vcf.gz.dat.mu  1000g.phase3.10k.b38.exome.vcf.gz.dat.UD  1000g.phase3.10k.b38.exome.vcf.gz.dat.V  1000g.phase3.10k.b38.exome.vcf.gz.dat.bed  1000g.phase3.10k.b38.exome.vcf.gz.dat.mu
resource/test/: hapmap_3.3.b37.dat.UD  hapmap_3.3.b37.dat.V  hapmap_3.3.b37.dat.bed  problematic.pileup  test.LongRead.pileup  test.bam.bai  test_readvcf.vcf
resource/test/expected/: result.Ancestry  result.Pileup  result.selfSM  test.FixAlpha.Ancestry  test.HeterFixPC.Ancestry  test.LongRead.pileup.Ancestry  test.LongRead.pileup.selfSM  test.WithinAncestry.Ancestry  test.WithinAncestry.FixPC.Ancestry
samtools/: CMakeLists.txt  bam2bcf.c  bam2bcf.h  bam_index.c  bamtk.c  sam_opts.h  samtools.h
statgen/: BaseAsciiMap.cpp  BaseAsciiMap.h  CMakeLists.txt  Error.cpp  Error.h  GenomeSequence.cpp  GenomeSequence.h  GzipFileType.h  IndexBase.cpp  InputFile.h  MathMatrix.cpp  MathMatrix.h  MathVector.cpp  MathVector.h
